# awa05-telemetria

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  analisis-estadistico.html  comparativo-calidad-agua.html  dashboard.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
awa05/: __init__.py  config.py  utils.py
awa05/core/: __init__.py  context.py  errors.py  health.py  logging.py  (+4 more)
config/: settings.json
docs/: DATA_STRATEGY.md  INFORME TÉCNICO PRELIMINAR DE PROBLEMA CON LA UNIDAD AWA05.docx  PHASE_0_CLOSEOUT.md  PHASE_1_STATUS.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  PHASE_4_STATUS.md  PHASE_5_STATUS.md  PHASE_6_STATUS.md  PRELIMINARY TECHNICAL PROBLEM REPORT IN UNIT AWA05.docx  RASPBERRY_PI_REMOTE_SETUP.md  RELAZIONE TECNICA PRELIMINARE SUI PROBLEMI RISCONTRATI CON L'UNITÀ AWA05.docx  REMEDIATION_PLAN.md
emulation/: .gitignore  Dockerfile  Dockerfile.simulation  README.md  docker-compose.simulation.yml  docker-compose.yml  prepare-image.sh  run-in-docker.sh  run-simulation.sh  test-phase1-commands.md  test-phase1-in-guest.sh  verify-ssh.sh
scripts/: main.py  process_data.py  read_distance.py  read_weight.py  read_ws2000.py  scheduler.py  upload_github.py  utils.py
tests/: test_config.py  test_distance_sensor.py  test_drivers_distance.py  test_drivers_system.py  test_drivers_weight.py  test_drivers_ws2000.py  test_health.py  test_logging.py  test_orchestrator.py  test_package_imports.py  test_process_data.py  test_quality_contract.py  test_scheduler.py  test_telemetry_level.py  test_upload_github.py  test_utils.py
(+18 files in other folders)
