[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awa05-telemetria"
version = "0.1.0"
description = "Sistema de monitoreo y telemetría ambiental para AWA05"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask",
    "PyGithub",
    "python-dotenv",
    "RPi.GPIO; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "schedule",
]

[tool.setuptools.packages.find]
include = ["awa05*"]
